@@ -109,4 +109,14 @@ theme that makes it more readable. To enable it, append the
 
 </para>
   </sect2>
+
+  <sect2><title>Preseeding</title>
+<para>
+
+Alternatively, &debian; can be installed completely automatically by using
+preseeding. This is documented in <xref linkend="appendix-preseed"/>.
+
+</para>
+  </sect2>
+
  </sect1>
