@@ -3,11 +3,14 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Reference the French translation of the brltty manual in fr.
   * Disable G-I on kfreebsd-*.
+  * Document booting d-i from grub2. Closes: #612165.
+  * Mention preseeding as an alternative for accessibility.
+  * Document that the text installer is selected by default.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
 
- -- Samuel Thibault <sthibault@debian.org>  Fri, 28 Jan 2011 00:07:55 +0100
+ -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 20:51:10 +0100
 
 installation-guide (20110122) unstable; urgency=low
 
